--- a/Algorithms_programming_Python/BRAHIM_OUHAMMOU.ipynb
+++ b/Algorithms_programming_Python/BRAHIM_OUHAMMOU.ipynb
@@ -68,8 +68,40 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with '/usr/local/bin/python3.7' requires the ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: '/usr/local/bin/python3.7 -m pip install ipykernel -U --user --force-reinstall'"
+     ]
+    }
+   ],
+   "source": [
+    "def\tadd_poly(poly_1 , poly_2):\n",
+    "    \n",
+    "    result = {}\n",
+    "    for exponent, coefficient in poly_1.items():\n",
+    "      result[exponent] = coefficient\n",
+    "    for exponent, coefficient in poly_2.items():\n",
+    "      if exponent in result:\n",
+    "        result[exponent] +=coefficient\n",
+    "      else:\n",
+    "          result[exponent] =coefficient\n",
+    "    result = dict(sorted(result.items() , reverse =True))\n",
+    "    return result\n",
+    "    \n",
+    "poly_1 = {2: 3 , 4:4 , 4:15}\n",
+    "poly_2 = {1 : 5 , 0 : 2}\n",
+    "\n",
+    "# poly_1 = add_poly( poly_1 , poly_1);\n",
+    "# poly_2 = add_poly( poly_2 , poly_2);\n",
+    "result  = add_poly( poly_1 , poly_2)\n",
+    "print(result)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -84,7 +116,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def factorial(num):\n",
+    "  if num < 0:\n",
+    "    return \n",
+    "  if num == 0 or num == 1:\n",
+    "      return 1\n",
+    "  return num * factorial(num - 1)\n",
+    "  \n",
+    "print(factorial(-10))\n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -99,7 +141,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def fibonacci(num):\n",
+    "  if num < 0:\n",
+    "    return \n",
+    "  if num == 0:\n",
+    "    return 0\n",
+    "  if num == 1:\n",
+    "    return 1\n",
+    "  return fibonacci(num -1) + fibonacci(num -2)\n",
+    "\n",
+    "print(fibonacci(19))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -253,7 +306,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
