--- a/Algorithms_programming_Python/BRAHIM_OUHAMMOU.ipynb
+++ b/Algorithms_programming_Python/BRAHIM_OUHAMMOU.ipynb
@@ -167,7 +167,66 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class  node:\n",
+    "  def __init__ (self , data):\n",
+    "    self.data = data\n",
+    "    self.next = None\n",
+    "\n",
+    "head = node(1)\n",
+    "tmp = head\n",
+    "for i in range(2 , 11):\n",
+    "  new_node = node(i)\n",
+    "  tmp.next = new_node\n",
+    "  tmp = new_node\n",
+    "\n",
+    "def print_nodes():\n",
+    "  tmp = head\n",
+    "  while tmp:\n",
+    "    print(tmp.data)\n",
+    "    tmp = tmp.next\n",
+    "\n",
+    "\n",
+    "def insert_node(head, new_node):\n",
+    "    tmp = head\n",
+    "    while tmp :\n",
+    "      if tmp.next is None :\n",
+    "        tmp.next = new_node\n",
+    "        break\n",
+    "      tmp = tmp.next\n",
+    "\n",
+    "def search(head , value):\n",
+    "  tmp = head\n",
+    "  while tmp:\n",
+    "    if tmp.data == value:\n",
+    "      return True\n",
+    "    tmp = tmp.next\n",
+    "  return False\n",
+    "\n",
+    "\n",
+    "def delet_node(head , val):\n",
+    "  # tmp = head\n",
+    "  while head and head.next :\n",
+    "    if head.next.data == val:\n",
+    "      head.next = head.next.next\n",
+    "    head = head.next\n",
+    "\n",
+    "print_nodes()\n",
+    "\n",
+    "print(\"------------ insert element ---------------------\")\n",
+    "new_node = node(1337)\n",
+    "insert_node(head, new_node)\n",
+    "print_nodes()\n",
+    "\n",
+    "print(\"------------ search element  ---------------------\")\n",
+    "print(search(head , 1337))\n",
+    "print(search(head , 66))\n",
+    "\n",
+    "print(\"------------ delete element  ---------------------\")\n",
+    "delet_node(head, 5)\n",
+    "print_nodes()\n",
+    "print(\"None\")"
+   ]
   },
   {
    "cell_type": "markdown",
