--- a/Algorithms_programming_Python/BRAHIM_OUHAMMOU.ipynb
+++ b/Algorithms_programming_Python/BRAHIM_OUHAMMOU.ipynb
@@ -142,14 +142,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def fibonacci(num):\n",
+    "def fibonacci(num , data={}):\n",
+    "  if num in data:\n",
+    "    return data[num]\n",
     "  if num < 0:\n",
     "    return \n",
     "  if num == 0:\n",
     "    return 0\n",
     "  if num == 1:\n",
     "    return 1\n",
-    "  return fibonacci(num -1) + fibonacci(num -2)\n",
+    "  data[num] = fibonacci(num -1) + fibonacci(num -2) \n",
+    "  return data[num]\n",
     "\n",
     "print(fibonacci(19))"
    ]
